--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,8 @@ a {
   color: black;
 }
 body {
+  overflow-y: auto;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,7 +16,14 @@ body {
   color: #212121;
   line-height: 1.5;
 }
-
+header {
+  position: sticky;  
+  top: 0; 
+  width: 100%;
+  padding: 5px 0 5px 15px;
+  margin: 0;
+  
+}
 img {
   display: block;
   width: 100%;
@@ -22,7 +31,6 @@ img {
   object-fit: cover;
 }
 .container {
-  
   max-width: 1200;
   margin: 0 auto;
 }
