--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,12 @@
 * {
   box-sizing: border-box;
 }
+
 a {
   text-decoration: none;
   color: black;
 }
+
 body {
   overflow-y: auto;
   margin: 0;
@@ -16,24 +18,27 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
 header {
-  position: sticky;  
+  position: fixed;  
   top: 0; 
   width: 100%;
   padding: 5px 0 5px 15px;
-  margin: 0;
-  
+  margin: 0;  
 }
+
 img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 .container {
   max-width: 1200;
   margin: 0 auto;
 }
+
 .is-hidden {
   display: none;
 }
@@ -48,6 +53,10 @@ img {
   margin-bottom: 20px;
 }
 
+.gallery__item:hover{
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
 .photo-card{
   display: flex;
   flex-direction: column;
@@ -60,6 +69,7 @@ img {
   gap:5px;
   justify-content:center;
 }
+
 .info-item{
   text-align: center;
   display: flex;
@@ -68,7 +78,6 @@ img {
 }
 
 .load-more-btn{
-  display: flex;
   margin: 0 auto;
   padding: 10px 15px;
   margin-bottom: 20px;
@@ -103,4 +112,9 @@ img {
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
+}
+
+.target-element{
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
